# rapid-url

./: .gitignore  .releaserc  Cargo.toml  dev_run.sh  kill.sh  package-lock.json  package.json  readme.md  release.sh  restart.sh
.github/workflows/: release.yaml
.sqlx/: query-3cf5fc65b04c47bb67cd89b9e4e6054a0b49aaf536dc95184fc4543b9e0cfaf9.json  query-46ccf74d114e17bb81caa40434510ac685764852066d64afdac34c9a5d7d44f9.json  query-9844f868ce0f4c4e289494b84e4347383a3563660ed68b98381b5c64a8f2d5a6.json
migrations/: 001_migration.sql
src/: commands.rs  errors.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs  openapi.rs  routes.rs  schemas.rs  startup.rs  telemetry.rs  tests.rs  utils.rs
