[package]
name = "rapid-url"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-http =  "3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
uuid = { version = "1.11.0", default-features = false, features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7.13"
tracing-log = "0.2"
tracing-opentelemetry = {version="0.21.0"}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }
opentelemetry-otlp = {version="0.13.0"}
opentelemetry = { version = "0.20.0", features = ["rt-tokio"]}
utoipa = {version="5.1.1", features=["chrono"]}
utoipa-swagger-ui = {version ="8.0.1", features=["actix-web"]}
utoipauto = "0.1.3"
jsonwebtoken = "9.2"
secrecy = { version = "0.10.3", features = ["serde"] }
config = { version = "0.14.0", default-features = false}


[lib]
path="src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "rapid-url"


[profile.release]
opt-level = 3 # 3 for release and 0 for dev
strip = "symbols"